# Thesis_project

./: README.md  one_hot_3.cpp
LIOR/: CMakeLists.txt  lior.cpp
data/: addgene-plasmid-66562-sequence-136499.gbk  test_large_plaintext.txt  test_very_small.txt
old_versions/: attempt_onehot.cpp  attempt_serialization.cpp  classtry.cpp  demo-simple-example.cpp  palisades_substring_attempt.cpp  proxy_reenc.cpp  save_right_onehot.cpp  ser_copy_cur.cpp  serialize_vector.cpp  serialize_vector.h  start.cpp  test_bin.cpp
thesis_central_code/: CMakeLists.txt  bob_decrypt.cpp  flexFHE.cpp  one_hot_10.cpp  one_hot_2.cpp  one_hot_3.cpp  one_hot_5_better_par(1).cpp  one_hot_5_better_par.cpp  one_hot_5_better_par_copy.cpp  tiny_pattern  trust.cpp  trust_decrypt.cpp  trusted_re_encrypt.cpp  untrust.cpp  untrusted_pub_key_gen.cpp
thesis_central_code/ciphertext_result_percent_match_large/: pm_result_0.txt  pm_result_1.txt  pm_result_2.txt  pm_result_3.txt  pm_result_4.txt  pm_result_5.txt  pm_result_6.txt
thesis_central_code/ciphertext_result_percent_match_small/: pm_result_0.txt  pm_result_1.txt  pm_result_2.txt
thesis_central_code/ciphertext_result_true_false_found/: tf_any_found_result.txt
thesis_central_code/ciphertext_result_wildcard_search/: wildcard_result_0.txt  wildcard_result_1.txt  wildcard_result_2.txt  wildcard_result_3.txt  wildcard_result_4.txt
thesis_central_code/data/: test.gbk  test_mid.txt  test_pattern_mid.txt  test_pattern_small.txt  test_small.txt  test_very_small.txt  test_veryvery_small.txt  testsmall.gbk
thesis_central_code/reenc_pattern_index_result/: Untitled.rtf
thesis_central_code/serialized_data/text/three/: CMakeLists.txt
thesis_central_code/serialized_genome_pattern_and_keys/: cryptoContext.txt  sk1.txt
thesis_central_code/serialized_percent_match_data/pattern/one/: pat_enc_0.txt  pat_enc_1.txt  pat_enc_2.txt  pat_enc_3.txt  pat_enc_4.txt  pat_enc_5.txt  pat_enc_6.txt
thesis_central_code/serialized_percent_match_data/pattern/three/: pat_enc_0.txt  pat_enc_1.txt  pat_enc_2.txt  pat_enc_3.txt  pat_enc_4.txt  pat_enc_5.txt  pat_enc_6.txt
thesis_central_code/serialized_percent_match_data/pattern/two/: pat_enc_0.txt  pat_enc_1.txt  pat_enc_2.txt  pat_enc_3.txt  pat_enc_4.txt  pat_enc_5.txt  pat_enc_6.txt
thesis_central_code/serialized_percent_match_data/pattern/zero/: pat_enc_0.txt  pat_enc_1.txt  pat_enc_2.txt  pat_enc_3.txt  pat_enc_4.txt  pat_enc_5.txt  pat_enc_6.txt
thesis_central_code/serialized_wildcard_data/pattern/one/: pat_enc_0.txt
thesis_central_code/serialized_wildcard_data/pattern/three/: pat_enc_0.txt
thesis_central_code/serialized_wildcard_data/pattern/two/: pat_enc_0.txt
thesis_central_code/serialized_wildcard_data/pattern/zero/: pat_enc_0.txt
